--- a/.github/workflows/databricks-sync.yml
+++ b/.github/workflows/databricks-sync.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   sync:
-    runs-on: ubuntu-latest
+    runs-on: arc-runner-set
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
