--- a/.github/workflows/databricks-sync.yml
+++ b/.github/workflows/databricks-sync.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Databricks CLI
-        uses: databricks/setup-cli@v0.214.0
+        uses: databricks/setup-cli@v0.214.0  # same version रखो, काम कर रहा है
 
       - name: Pull changes into Databricks Repo
-        run: databricks repos update --repo-id 1620491462867537 --branch main
+        run: databricks repos update 1620491462867537 --branch main
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
